--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tzm-section-block",
-	"version": "1.0.1-beta",
+	"version": "1.0.6",
 	"description": "Wrap your content in a versatile section block - great for impressive headers and sections with eye-catching features like parallax effects and shape dividers.",
 	"author": "TezmoMedia - Jakob Wiens",
 	"license": "GPL-2.0-or-later",
@@ -15,19 +15,23 @@
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip"
 	},
+	"styleLint": {
+		"extends": "@wordpress/stylelint-config"
+	},
 	"dependencies": {
-		"@wordpress/block-editor": "^9.1.0",
-		"@wordpress/blocks": "^11.8.0",
-		"@wordpress/i18n": "^4.9.0",
+		"@wordpress/block-editor": "^10.2.0",
+		"@wordpress/blocks": "^11.18.0",
+		"@wordpress/i18n": "^4.19.0",
 		"fast-average-color": "^7.1.0",
 		"jarallax": "^2.0.3",
 		"local-wpcli": "^2.1.0",
 		"po2json": "^0.3.0"
 	},
 	"devDependencies": {
-		"@wordpress/base-styles": "^4.5.0",
-		"@wordpress/eslint-plugin": "^12.4.0",
-		"@wordpress/scripts": "^23.1.0",
+		"@wordpress/base-styles": "^4.10.0",
+		"@wordpress/eslint-plugin": "^13.3.0",
+		"@wordpress/scripts": "^24.3.0",
+		"@wordpress/stylelint-config": "^21.2.0",
 		"prettier": "^2.6.2"
 	}
 }
